# dp-wizard

./: .clabot  .coveragerc  .dockerignore  .flake8  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  CHANGELOG.md  Dockerfile  README-PYPI.md  README-TEAM.md  README.md  TEST-PLAN.md  WHAT-WE-LEARNED.md  app.py  changelog.py  ci.sh  demo-outputs.ipynb  demo.ipynb  dependencies.py  pyproject.toml  requirements-app.in  requirements-app.txt  requirements-dev.in  requirements-dev.txt  requirements-dev.txt-e  requirements.in  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: test.yml
docs/: index.html  index.md
dp_creator_ii/: __init__.py  app.py  argparse_helpers.py  converters.py  junk.ipynb  mock_data.py  template.py
dp_creator_ii/app/: __init__.py  analysis_panel.py  dataset_panel.py  results_panel.py  ui_helpers.py
dp_creator_ii/templates/: README.md  context.py  notebook.py  script.py
dp_creator_ii/tests/: test_app.py  test_arg_parser.py  test_converters.py  test_csv.py  test_help.py  test_misc.py  test_mock_data.py  test_template.py
dp_creator_ii/utils/: argparse_helpers.py  csv_helper.py  dp_helper.py  mock_data.py  template.py
dp_wizard/: DP Wizard.py  FAQ.md  __init__.py  app.py  app_cloud.py  app_demo.py  app_local.py  app_qa.py  cloud_app.py  demo.py  types.py
dp_wizard/analyses/: __init__.py  common.py
scripts/: changelog.py  ci.sh  deploy.sh  docker.sh  executable.sh  requirements.py  screenshots.sh
tests/: test_app.py  test_csv.py  test_docs.py  test_misc.py  test_mock_data.py  test_report.py  test_template.py
(+200 files in other folders)
