[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dp_wizard"
authors = [{name = "Chuck McCallum", email = "mccallucc@gmail.com"}]
readme = "README-PYPI.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "shiny>=1.2.1",
    "faicons>=0.2.2",
    "matplotlib>=3.10.1",
    "opendp[polars]==0.12.1a20250227001",
    "jupytext>=1.16.7",
    "jupyter-client>=8.6.3",
    "nbconvert[webpdf]>=7.16.6",
    "ipykernel>=6.29.5",
    "black>=25.1.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
# Prefer dash in name where allowed (repo named and executable)
# but provide alias to minimize frustration.
dp-wizard = "dp_wizard:main"
dp_wizard = "dp_wizard:main"

[project.urls]
Home = "https://github.com/opendp/dp-wizard"

[tool.pyright]
include = ["dp_wizard"]
ignore = ["**/no-tests/"]
